<resources>
    <string name="app_name">ElderCare</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign up</string>
    <string name="next">Next</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="signup_label">Sign up</string>
    <string name="prompt_date">Date of Birth</string>
    <string name="prompt_name">Full Name</string>
    <string name="chat_activity">Chat</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_home">Elder care</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="google_maps_key_instructions" templateMergeStrategy="replace"><!--

  TODO: Before you run your application, you need a Google Maps API key.

  To get one, follow this link, follow the directions and press "Create" at the end:

  https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX%3Bteamtreehouse.com.iamhere

  You can also add your credentials to an existing key, using this line:
  XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX:XX;teamtreehouse.com.iamhere

  Once you have your key (it starts with "AIza"), replace the "google_maps_key"
  string in this file.
  --></string>

    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyBkvDwwfb2GVH5PY72N3Jt5lbEZgSk6BbE</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
