<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:nestedScrollingEnabled="false"
    android:background="@color/colorPrimary"
    android:measureWithLargestChild="false">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/singup_form" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:contentDescription="Singup Form"
        android:padding="16dp"
        android:background="@drawable/card">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:background="@drawable/border_bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Account information"
                    android:id="@+id/title" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Name"
                android:layout_marginTop="16dp">

                <AutoCompleteTextView android:id="@+id/name" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_name"
                    android:inputType="textPersonName" android:maxLines="1"
                    android:singleLine="true"
                    android:contentDescription="Name input" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Email"
                android:layout_marginTop="8dp">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true"
                    android:contentDescription="Email input" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Password"
                android:layout_marginTop="8dp">

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:contentDescription="Password Imput" />

            </android.support.design.widget.TextInputLayout>

            <TextView android:id="@+id/bday" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_date" android:contentDescription="Birthday input"
                android:textSize="18dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@color/white"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:clickable="true"
                android:id="@+id/datePicker"
                android:onClick="showDatePickerDialog">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/date"
                    android:textSize="16dp" />
            </RelativeLayout>

            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="24dp" android:text="@string/next"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
